# message_moderation

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docker_compose/: app.yaml  mongo.yaml  postgresql.yaml  redis.yaml
src/: main.py
src/application/: container.py  main.py
src/application/api/: main.py
src/application/api/utils/: depends.py  lifespan.py
src/application/api/v1/: __init__.py  ignored_messages.py  schemas.py
src/domain/entity/: base.py  chat.py  ignored_message.py  message.py  skiped_message.py
src/domain/exceptions/: base.py  service.py
src/domain/repositories/: chats.py  ignored_messages.py  messages.py  skiped_messages.py
src/domain/services/: message_moderation.py
src/domain/utils/: progress_counter_storage.py  skiped_message_ids_storage.py
src/infrastructure/proxy/: report_proxy.py
src/infrastructure/repositories/mongo/: base.py  chats.py  converters.py  messages.py
src/infrastructure/repositories/postgres/: base.py  database.py  ignored_messages.py  skiped_messages.py
src/infrastructure/repositories/postgres/models/: base.py  ignored_message.py  skiped_message.py
src/infrastructure/repositories/redis/: base.py  ignored_messages.py
src/infrastructure/utils/: progress_counter_storage.py  skiped_message_ids_storage.py
src/settings/: main.py  mongodb.py  postgres.py  redis.py
