[tool.poetry]
name = "message-moderation"
version = "0.1.0"
description = ""
authors = ["DmiTryAll <dmitron.kulikov0902@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.7.0"
pydantic-settings = "^2.7.1"
fastapi = "^0.115.8"
punq = "^0.7.0"
redis = "^5.2.1"
aiojobs = "^1.3.0"
uvicorn = "^0.34.0"
aiogram = "^3.18.0"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.38"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
